# GLNotGirlsLove

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  cpputils.py  justfile
.github/workflows/: cmake-single-platform.yml
include/: camera.hpp  mesh.h  object.h  shader.h
include/KE/: camera.hpp  shader.h
include/glad/: gl.h
src/: cheese.cpp  cheese_block.cpp  main.cpp  mesh.cpp  object.cpp  phong_asphalt.cpp  shader.cpp
src/common/: mesh.cpp  object.cpp  shader.cpp
src/shaders/: cheese_block.frag  cheese_block.vert  phong_asphalt.frag  phong_asphalt.vert  shader.frag  shader.vert
